# open-u60-pro

./: .gitignore  Cargo.toml  README.md  deploy.sh  device_report.json  setup.sh  ubus_probe_report.json
.github/workflows/: android-build.yml
mobile/: README.md
mobile/android/ZTECompanion/: settings.gradle.kts
mobile/ios/ZTECompanion/: ZTECompanionApp.swift  project.yml
mobile/ios/scripts/: build_and_run.sh
scripts/: battery-log-loop.sh  check-reboot.sh  cpu-compare.sh
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx
web/src/lib/: adb.ts
zte-agent/: Cargo.toml
zte-agent/src/: at_cmd.rs  at_terminal.rs  auth.rs  cell.rs  charge_policy.rs  device_ext.rs  handlers.rs  lan_test.rs  main.rs  modem_ext.rs  network_ext.rs  router.rs  scheduler.rs  server.rs  sim.rs  sms.rs  sms_forward.rs  speedtest.rs  system.rs  telephony.rs  ubus.rs  wifi.rs
zte-agent/src/doh/: config.rs  (+2 more)
zte-cli/: Cargo.toml
zte-cli/src/: main.rs
zte-cli/src/cmd/: acl.rs  adb_enable.rs  backup.rs  companion.rs  explore.rs  mod.rs  monitor.rs  network.rs  probe.rs  setup.rs  ssh.rs
zte-cli/src/cmd/settings/: apn.rs  cell.rs  device.rs  display.rs  dns.rs  firewall.rs  lan.rs  mod.rs  network.rs  qos.rs  schedule.rs  vpn.rs  wifi.rs
zte-cli/src/ui/: colors.rs  csv_logger.rs  mod.rs  panels.rs
zte-lib/: Cargo.toml
zte-lib/src/: adb.rs  at.rs  device.rs  error.rs  lib.rs  ssh.rs  transport.rs  ubus.rs
zte-lib/src/signal/: collector.rs  parsers.rs  types.rs
zte-lib/src/zcu/: compression.rs  config.rs  constants.rs  crypto.rs  keys.rs  mod.rs
(+239 files in other folders)
