[package]
name = "zte-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zte"
path = "src/main.rs"

[dependencies]
zte-lib = { path = "../zte-lib" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
comfy-table = "7"
rpassword = "7"
serde_json = "1"
quick-xml = "0.37"
ratatui = "0.29"
crossterm = "0.28"
csv = "1"
chrono = "0.4"
indicatif = "0.17"
regex = "1"
