[package]
name = "zte-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
ureq = { version = "3", features = ["json"] }
socket2 = "0.5"
libc = "0.2"
sha2 = "0.10"
md-5 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ecb = { version = "0.1", features = ["alloc"] }
flate2 = "1"
wait-timeout = "0.2"
regex = "1"
